<resources>
    <string name="app_name">Mobilcsomag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok_dialog">OK</string>
    <string name="delete_dialog">TÖRLÉS</string>
    <string name="cancel_dialog">MÉGSEM</string>
    <string name="package_create_dialog_error_message">A mobilcsomag elkészítéséhez, ki kell válassz legalább 1 alcsomagot!</string>
    <string name="attention_dialog_title">Figyelem</string>
    <string name="empty_field_error">Kötelező kitölteni!</string>
    <string name="create_package_instruction_dialog_message">Nevezd el a csomagot és adj egy leírást!</string>
    <string name="data_dialog_title">Adatok</string>
    <string name="account_delete_dialog_message">Biztosan törlöd a fiókod?</string>
    <string name="profile">Profil</string>
    <string name="personal_data">Adatok</string>
    <string name="packages">Csomagok</string>
    <string name="logout">Kijelentkezés</string>
    <string name="delete_account">Fiók törlése</string>
    <string name="personal_packages">Saját csomagok</string>
    <string name="personal_package">Saját csomag</string>
    <string name="internet">Mobilinternet</string>
    <string name="call">Hívás</string>
    <string name="message">Üzenetek</string>
    <string name="create">Készítés</string>
    <string name="overview">Áttekintés</string>
    <string name="package_data">Csomag adatok</string>
    <string name="no_personal_packages">Nincsenek saját csomagjaid</string>
    <string name="create_personal_package">Saját csomag készítése</string>
    <string name="create_package_button_title">Készítsd el saját csomagod!</string>
    <string name="create_package_button_subtitle">Szabd testre csomagodat igényeidnek megfelelően</string>
    <string name="login">Bejelentkezés</string>
    <string name="email">Email</string>
    <string name="password">Jelszó</string>
    <string name="enter">Belépés</string>
    <string name="no_account_register">Nincs fiókod? Regisztrálj</string>
    <string name="call_data">Hívás adatok:</string>
    <string name="message_data">Üzenet adatok:</string>
    <string name="internet_data">Internet adatok:</string>
    <string name="price_data">Ár adatok:</string>
    <string name="add">Hozzáad</string>
    <string name="remove">Eltávolít</string>
    <string name="personal_data_title">Saját adatok</string>
    <string name="lastname">Vezetéknév</string>
    <string name="firstname">Keresztnév</string>
    <string name="phoneNumbers">Telefonszámok</string>
    <string name="add_phonenumber">TELEFONSZÁM HOZZÁADÁSA</string>
    <string name="save">Mentés</string>
    <string name="register">Regisztráció</string>
    <string name="package_name">Csomag neve</string>
    <string name="package_description">Csomagleírás</string>
    <string name="no_network_message">Nincs internetkapcsolat!</string>
    <string name="again">Újra</string>
    <string name="package_info_default_title">Nincs még egy csomagod sem!</string>
    <string name="package_info_default_description">Válassz a lenti csomagok közül vagy készíts egy sajátot!</string>
    <string name="phone_number_match_error">A két telefonszám megegyezik!</string>
    <string name="options_dialog_title">Opciók</string>
    <string name="select_phone_number_dialog_message">Válasszd ki melyik telefonszámodhoz szeretnéd hozzáadni a csomagot!</string>
    <string name="empty">Nincs</string>
    <string name="phone_number">Telefonszám</string>
    <string name="password_length_error">Legalább 6 karakterből kell álljon!</string>
    <string name="channel_name">Mobilcsomag</string>
    <string name="channel_description">Mobilcsomag alkalmazás értsítések</string>
    <string name="notification_title">Értesítés</string>
    <string name="notification_description">Kérlek olvasd el a README-t</string>
</resources>